# MedNote

./: Makefile  README.html  README.md  REQUIREMENTS.html  REQUIREMENTS.md  devbox.json  docker-compose.yml  package-lock.json  pyproject.toml
backend/src/vaait/: app.py  settings.py
backend/src/vaait/controllers/: mednote.py
backend/src/vaait/services/: extract_icd10_codes.py  extractions.py  insights.py  transcription.py
deployment/: main.tf  terraform_backend.tf  userdata.tftpl
deployment.dev/data/: Modelfile
deployment/data/: Caddyfile.dev  Caddyfile.prod  Modelfile  Modelfile.NER  test.json
docker/dev/: Dockerfile  Dockerfile.frontend
frontend/: package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: entityLegend.ts
frontend/src/lib/api/: mednote.ts
frontend/src/lib/components/: AudioRecordPlayer.svelte  Calendar.svelte  EDReport.svelte  EDReportRow.svelte  EDView.svelte  EntityDetection.svelte  EntityLegend.svelte  ExistAudioForm.svelte  InformPrompt.svelte  InformPromptReport.svelte  InformPromptSubmit.svelte  Insight.svelte  InsightContent.svelte  MicRecord.svelte  ProgressDialog.svelte  Record.svelte  Searchbox.svelte  SideBar.svelte  SideNav.svelte  SpeakerBadge.svelte  Transcript.svelte  TranscriptAudioPlayer.svelte
frontend/src/lib/stores/: AudioUrlStore.ts  AudioWaveLoadingStore.ts  EntityDetectionStore.ts
frontend/src/lib/types/: mednote.ts
frontend/src/routes/: +layout.svelte  +page.svelte
